# tgc-garfield

./: .gitignore
projects/tgc/: CMakeLists.txt  README.md  TODO.md
projects/tgc/config/: default_tgc.json  default_tgc_fast-current.json  smoke_tgc.json  smoke_tgc_2.json  smoke_tgc_5.json
projects/tgc/docs/: readout_scheme.tex
projects/tgc/gui/: app.py
projects/tgc/src/: tgc_sim.cc
projects/tgc/tools/: plot_ion_tail.py
